--- a/front/src/style/desktop.css
+++ b/front/src/style/desktop.css
@@ -118,7 +118,7 @@
   align-items: center;
   justify-content: center;
   padding: 1.5rem;
-  background: rgba(255, 255, 255, 0.1);
+  background: rgba(255, 255, 255, 0.3);
   border-radius: 15px;
   cursor: pointer;
   transition: all 0.3s ease;
